--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <section id="header">
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading"><img src="{% static "img/YEC Logob.png" %}" alt=""></div>
+                    <div class="intro-heading">SWIFT</div>
                     <div class="intro-lead-in">The Quickest Mobile Application Idea-generating Copmetition</div>
                 </div>
             </div>
