--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -61,7 +61,8 @@ h6 {
 }
 
 .bg-light-gray {
-    background-color: #f7f7f7;
+    background-color: #0097bb;
+    color: white;
 }
 
 .bg-darkest-gray {
