--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,6 @@
     <header>
         <section id="header">
             <div class="container">
-                <div class="intro-text">
-                    <div class="intro-heading">SWIFT</div>
-                    <div class="intro-lead-in">The Quickest Mobile Application Idea-generating Copmetition</div>
-                </div>
             </div>
         </section>
     </header>
@@ -130,7 +126,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>The best will receive P25000 cash!</h4>
+                            <img class="img-circle img-responsive" src="{% static "img/Win-Circle.png" %}" alt="">
                         </div>
                     </li>
                 </ul>
