--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
     <header>
         <section id="header">
             <div class="container">
+                <div class="intro-heading"></div>
+                <div class="intro-lead-in"></div>
+                <div class="intro-heading"></div>
+                <div class="intro-lead-in"></div>
             </div>
         </section>
     </header>
