--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="{% static "img/thinkt.png" %}" alt="">
+                            <img class="img-circle img-responsive" src="{% static "img/think.png" %}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -86,7 +86,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="{% static "img/buildt.png" %}" alt="">
+                            <img class="img-circle img-responsive" src="{% static "img/build.png" %}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -103,7 +103,7 @@
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="{% static "img/excelt.png" %}" alt="">
+                            <img class="img-circle img-responsive" src="{% static "img/excel.png" %}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
