--- a/templates/index.html
+++ b/templates/index.html
@@ -143,56 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">TELL US YOUR IDEA</h2>
-                    {% if wizard.steps.current == '0' %}
-                        <h3 class="section-subheading text-muted"></h3>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-7">
-                    {% for message in messages %}
-                        <div class="alert alert-success alert-dismissible" role="alert">
-                          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                          {{ message }}
-                        </div>
-                    {% endfor %}
-
-                    {% if wizard.steps.current == '1' %}
-                        You can skip this step if you are doing this by yourself.
-                    {% endif %}
-
-                    {% if wizard.steps.current == '2' %}
-                    <p class="section-subheading text-muted">Keep in mind that this is your official entry, make sure to formulate clear and complete answers.</p>
-                    <p class="section-subheading text-muted"><i>Tip: The judgeswill rely heavily on what you write and explain here. It is your job to catch their attention and keep them interested with your mobile app concept. If by the time they finish reading your entry, you leave them wanting to have your app developed-- then good job you! You just might be one to take home the grand prize.</i></p>
-                    {% endif %}
-
-                    <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
-                    {% if wizard.steps.current == '0' %}
-                        <p>First Applicant</p>
-                    {% endif %}
-                    {% if wizard.steps.current == '1' %}
-                        <p>Second Applicant</p>
-                    {% endif %}
-                    <form action="/#form" method="post" enctype="multipart/form-data">{% csrf_token %}
-                        <table>
-                        {{ wizard.management_form }}
-                        {% if wizard.form.forms %}
-                            {{ wizard.form.management_form }}
-                            {% for form in wizard.form.forms %}
-                                {% bootstrap_form form %}
-                            {% endfor %}
-                        {% else %}
-                            {% bootstrap_form wizard.form %}
-                        {% endif %}
-                        </table>
-                        {% if wizard.steps.prev %}
-                        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
-                        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
-                        {% endif %}
-                    <input type="submit" value="{% trans "submit" %}"/>
-                    </form>
+                    <h2 class="section-heading">Submission of entries is now closed. Thanks for all thos who submitted, please tune in for further announcements.</h2>
                 </div>
             </div>
         </div>
