--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Submission of entries is now closed. Thanks for all thos who submitted, please tune in for further announcements.</h2>
+                    <h2 class="section-heading">Submission of entries is now closed. Thanks for all those who submitted, please tune in for further announcements.</h2>
                 </div>
             </div>
         </div>
