--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}Young Entreprenuers Convention{% endblock %}</title>
+    <title>{% block title %}Young Entrepreneurs Convention{% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
